# terrain-erosion

./: .gitignore  README.md  WORKSPACE.bazel  add_bin.cc  bin2png_col.sh  bin2png_dir.sh  bin2png_gray.sh  bin2png_sign.sh  bin2png_vec.sh  bin2ppm_col  bin2ppm_col.cc  bin2ppm_dir  bin2ppm_dir.cc  bin2ppm_gray  bin2ppm_gray.cc  bin2ppm_vec  bin2ppm_vec.cc  binimg.h  calc_norm  calc_norm.cc  fractal_perlin.ppm  fractal_perlin.sh  fractal_perlin_dx.ppm  fractal_perlin_dy.ppm  fractal_perlin_normal.ppm  gmock.BUILD_bkp  grid.h  main  main.cc  makefile  noise.h  normal.h  perlin.ppm  perlin_grad.cc  perlin_val.cc  rand.ppm  rand_col  rand_col.cc  rand_col_256.ppm  rand_dir  (+11 more)
container/spatial/: BUILD.bazel  grid.h  grid_test.cc  spatial_container.cc  spatial_container.h
graphics/analysis/: BUILD.bazel  bin_range.cc  calc_norm.cc  differential.cc  differential.h  min_max.cc  min_max.h
graphics/color/: BUILD.bazel  color.cc  color.h
graphics/image/: BUILD.bazel  pixel.h
graphics/image/binary/: BUILD.bazel  add_bin.cc  bin2png_col.cc  bin2png_dir.cc  bin2png_gray.cc  bin2png_sign.cc  bin2png_vec.cc  bin2ppm_col.cc  bin2ppm_dir.cc  bin2ppm_gray.cc  bin2ppm_sign.cc  bin2ppm_vec.cc  binimg.cc  binimg.h  binimg_registration.h  binimg_test.cc  remap_bin.cc  scaling_transformer.cc  scaling_transformer.h  util.cc  util.h
graphics/image/grid/: BUILD.bazel  grid.h
graphics/image/pipeline/: pipeline.h
graphics/mesh/: common.h
graphics/mesh/io/: BUILD.bazel  stl.cc  stl.h
graphics/noise/: BUILD.bazel  noise.cc  noise.h  perlin_grad.cc  perlin_val.cc  rand_col.cc  rand_dir.cc  rand_gray.cc  rand_vec.cc  random.cc  random.h
graphics/shapes/: BUILD.bazel  circle.cc  circle_field.cc  rect.cc  shape.cc
math/: BUILD.bazel  common.cc  common.h  constants.h
math/geometry/shapes/: BUILD.bazel  polygon.h  shape.cc  shape.h
math/graph/: BUILD.bazel  default_simple_graph.cc  default_simple_graph.h  default_simple_graph_test.cc  force_diagram.cc  force_diagram.h  graph.h
math/vector/: BUILD.bazel  matrix.cc  matrix.h  vector.cc  vector.h  vector_helper.h  vector_test.cc
util/: BUILD.bazel  status.cc  status.h  statusor.h
