load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "googletest",
    remote = "https://github.com/google/googletest",
    commit = "703bd9caab50b139428cea1aaff9974ebee5742e",
)

git_repository(
    name = "com_google_absl",
    remote = "https://github.com/abseil/abseil-cpp.git",
    commit = "aa844899c937bde5d2b24f276b59997e5b668bde",
)

git_repository(
    name = "stb",
    init_submodules = True,
    branch = "master",
    remote = "https://github.com/nitronoid/rules_stb"
)

git_repository(
    name = "protobuf",
    remote = "https://github.com/protocolbuffers/protobuf.git",
    commit = "fe1790ca0df67173702f70d5646b82f48f412b99",
)