package(default_visibility = ["//visibility:public"])

cc_library(
    name = "normal",
    hdrs = ["normal.h"],
)

cc_binary(
    name = "bin_range",
    srcs = ["bin_range.cc"],
    deps = [
        "//graphics/image/binary:binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "calc_norm",
    srcs = ["calc_norm.cc"],
    deps = [
        ":normal",
        "//graphics/image/binary:binimg",
        "//cxxopts:cxxopts",
    ],
)