# TODO(nugentgibson): describe this package.

cc_library(
    name = "graph",
    hdrs = ["graph.h"],
    deps = [
        # "@com_google_protobuf//net/proto2/public:proto2",
        "//util:status",
        "@com_google_absl//absl/strings",
        "//util:statusor",
    ],
)

cc_library(
    name = "default_simple_graph",
    srcs = ["default_simple_graph.cc"],
    hdrs = ["default_simple_graph.h"],
    deps = [
        ":graph",
        "//util:status",
    ],
)

cc_library(
    name = "force_diagram",
    srcs = ["force_diagram.cc"],
    hdrs = ["force_diagram.h"],
    deps = [
        ":graph",
        "//util:status",
    ],
)

cc_test(
    name = "default_simple_graph_test",
    srcs = ["default_simple_graph_test.cc"],
    deps = [
        ":default_simple_graph",
        "@googletest//:gtest_main",
        "//util:status",
    ],
)

cc_test(
    name = "force_diagram_test",
    srcs = ["force_diagram_test.cc"],
    deps = [
        ":force_diagram",
        "@googletest//:gtest_main",
    ],
)
