package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vector",
    hdrs = ["vector.h"],
    srcs = ["vector.cc"],
    deps = [
        "//math:common",
    ],
)

cc_library(
    name = "matrix",
    hdrs = ["matrix.h"],
    srcs = ["matrix.cc"],
    deps = [
        "//math:common",
    ],
)