package(default_visibility = ["//visibility:public"])

cc_library(
    name = "binimg",
    hdrs = ["binimg.h"],
)

cc_binary(
    name = "bin2ppm_gray",
    srcs = ["bin2ppm_gray.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_sign",
    srcs = ["bin2ppm_sign.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_col",
    srcs = ["bin2ppm_col.cc"],
    deps = [
        ":binimg",
        "//graphics/color:color",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_vec",
    srcs = ["bin2ppm_vec.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_dir",
    srcs = ["bin2ppm_dir.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "add_bin",
    srcs = ["add_bin.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "remap_bin",
    srcs = ["remap_bin.cc"],
    deps = [
        ":binimg",
        "//cxxopts:cxxopts",
    ],
)