package(default_visibility = ["//visibility:public"])

cc_library(
    name = "binimg",
    hdrs = ["binimg.h"],
    srcs = ["binimg.cc"],
    alwayslink = 1,
    deps = [
        "//graphics/image:pixel",
    ],
)

cc_test(
    name = "binimg_test",
    srcs = ["binimg_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@googletest//:gtest_main",
        ":binimg",
    ],
)

cc_library(
    name = "binimg_registration",
    hdrs = ["binimg_registration.h"],
    deps = [
        ":binimg",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cc"],
    alwayslink = 1,
    deps = [
        ":binimg",
        ":binimg_registration",
        "//graphics/color:color",
    ],
)

cc_binary(
    name = "bin2ppm_gray",
    srcs = ["bin2ppm_gray.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2png_gray",
    srcs = ["bin2png_gray.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
        "@stb//:image_write",
    ],
)

cc_binary(
    name = "bin2ppm_sign",
    srcs = ["bin2ppm_sign.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2png_sign",
    srcs = ["bin2png_sign.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
        "@stb//:image_write",
    ],
)

cc_binary(
    name = "bin2ppm_col",
    srcs = ["bin2ppm_col.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_vec",
    srcs = ["bin2ppm_vec.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "bin2ppm_dir",
    srcs = ["bin2ppm_dir.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "add_bin",
    srcs = ["add_bin.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)

cc_binary(
    name = "remap_bin",
    srcs = ["remap_bin.cc"],
    deps = [
        ":binimg",
        ":util",
        "//cxxopts:cxxopts",
    ],
)