package(default_visibility = ["//visibility:public"])

cc_library(
    name = "shape",
    hdrs = ["shape.h"],
    srcs = ["shape.cc"],
    deps = [
        "//math/vector:vector",
    ],
)

cc_library(
    name = "polygon",
    hdrs = ["polygon.h"],
    srcs = ["polygon.cc"],
    deps = [
        ":shape",
        "//math/vector:vector",
    ],
)